--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,9 @@
 asgiref==3.8.1
-chardet==5.2.0
+distlib==0.3.9
 Django==5.2
-django-admin==2.0.2
-django-excel-response2==3.0.6
-django-extensions==4.1
-django-six==1.0.5
-excel-base==1.0.4
-gunicorn==23.0.0
-isoweek==1.3.3
-mod-wsgi==5.0.2
-mysqlclient==2.2.7
-packaging==25.0
-pillow==11.2.1
-python-dateutil==2.9.0.post0
-reportlab==4.4.0
-screen==1.0.1
-six==1.17.0
+filelock==3.18.0
+numpy==2.2.5
+platformdirs==4.3.7
+python-decouple==3.8
 sqlparse==0.5.3
-TimeConvert==3.0.13
-typing_extensions==4.13.2
-tzlocal==5.3.1
-xlwt==1.3.0
+virtualenv==20.30.0
