--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.8.1
+chardet==5.2.0
 distlib==0.3.9
 Django==5.2
+django-extensions==4.1
 filelock==3.18.0
+mysqlclient==2.2.7
 numpy==2.2.5
+pillow==11.2.1
 platformdirs==4.3.7
 python-decouple==3.8
+reportlab==4.4.0
 sqlparse==0.5.3
+typing_extensions==4.13.2
 virtualenv==20.30.0
